--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,7 +2,7 @@ schemaVersion: 2.2.2
 metadata:
   name: java-maven
   displayName: Maven Java
-  description: Java application based on Maven 3.8 and OpenJDK 17
+  description: Java application based on Maven 3.8 and OpenJDK 21
   icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/java-maven.jpg
   tags:
     - Java
@@ -13,7 +13,7 @@ metadata:
 components:
   - name: tools
     container:
-      image: registry.access.redhat.com/ubi9/openjdk-17:1.20-2.1721752931
+      image: quay.io/upstream/ubi9:openjdk-21-custom
       command:
         - tail
         - '-f'
@@ -64,4 +64,4 @@ starterProjects:
   - name: springbootproject
     git:
       remotes:
-        origin: https://github.com/devfile-samples/springboot-ex.git
+        origin: https://github.com/ahadrez/springboot-ex.git
