--- a/devfile.yaml
+++ b/devfile.yaml
@@ -10,14 +10,12 @@ metadata:
   projectType: Maven
   language: Java
   version: 1.3.1
+
 components:
   - name: tools
     container:
       image: quay.io/upstream/ubi9:openjdk-21-custom
-      command:
-        - tail
-        - '-f'
-        - /dev/null
+      command: ["tail", "-f", "/dev/null"]
       memoryLimit: 512Mi
       mountSources: true
       endpoints:
@@ -32,9 +30,10 @@ components:
           path: /home/user/.m2
       env:
         - name: DEBUG_PORT
-          value: '5858'
+          value: "5858"
   - name: m2
     volume: {}
+
 commands:
   - id: mvn-package
     exec:
@@ -44,6 +43,7 @@ commands:
       group:
         kind: build
         isDefault: true
+
   - id: run
     exec:
       component: tools
@@ -52,6 +52,7 @@ commands:
       group:
         kind: run
         isDefault: true
+
   - id: debug
     exec:
       component: tools
@@ -60,13 +61,15 @@ commands:
       group:
         kind: debug
         isDefault: true
+
   - id: build-image
     exec:
       component: tools
       workingDir: ${PROJECT_SOURCE}
       commandLine: podman build -t java-maven-app:latest -f Dockerfile .
       group:
-        kind: build       
+        kind: build
+
 starterProjects:
   - name: springbootproject
     git:
