--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,9 +4,7 @@ metadata:
   displayName: Maven Java
   description: Java application based on Maven 3.8 and OpenJDK 21
   icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/java-maven.jpg
-  tags:
-    - Java
-    - Maven
+  tags: [Java, Maven]
   projectType: Maven
   language: Java
   version: 1.3.1
@@ -16,7 +14,7 @@ components:
     container:
       image: quay.io/upstream/ubi9:openjdk-21-custom
       command: ["tail", "-f", "/dev/null"]
-      memoryLimit: 512Mi
+      memoryLimit: 1Gi
       mountSources: true
       endpoints:
         - name: https-maven
@@ -35,6 +33,17 @@ components:
     volume: {}
 
 commands:
+  # 🧩 Build the app (Maven) and container image (Buildah) in one step
+  - id: package-and-build
+    composite:
+      commands:
+        - mvn-package
+        - build-image
+      group:
+        kind: build
+        isDefault: true
+      label: "Package + Build Image"
+
   - id: mvn-package
     exec:
       component: tools
@@ -42,7 +51,24 @@ commands:
       commandLine: mvn -Dmaven.repo.local=/home/user/.m2/repository package
       group:
         kind: build
-        isDefault: true
+
+  - id: build-image
+    exec:
+      component: tools
+      workingDir: ${PROJECT_SOURCE}
+      commandLine: >
+        bash -lc '
+        export XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR:-/tmp/${UID}};
+        mkdir -p "$XDG_RUNTIME_DIR";
+        buildah bud
+          --storage-driver=vfs
+          --userns=keep-id
+          --format=docker
+          -t java-maven-app:latest
+          -f Dockerfile
+          .'
+      group:
+        kind: build
 
   - id: run
     exec:
@@ -61,14 +87,6 @@ commands:
       group:
         kind: debug
         isDefault: true
-
-  - id: build-image
-    exec:
-      component: tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: podman build -t java-maven-app:latest -f Dockerfile .
-      group:
-        kind: build
 
 starterProjects:
   - name: springbootproject
